fix:bug edit wallet and category on transaction list
